src/parser/snapshots/clight__parser__tests__var_decl_no_type.snap
---
source: src/parser/mod.rs
expression: result
snapshot_kind: text
---
Ok(
    Decl {
        token: Token {
            kind: Let,
            token: "let",
            offset: 0,
        },
        kind: VarDecl {
            ident: Token {
                kind: Ident,
                token: "a",
                offset: 4,
            },
            spec: None,
            init: Scalar(
                Number(
                    202,
                ),
            ),
        },
    },
)
