src/parser/snapshots/clight__parser__tests__var_decl_with_type.snap
---
source: src/parser/mod.rs
expression: result
snapshot_kind: text
---
Ok(
    Decl {
        token: Token {
            kind: Let,
            token: "let",
            offset: 0,
        },
        kind: Var {
            ident: Token {
                kind: Ident,
                token: "a",
                offset: 4,
            },
            spec: Some(
                TypeSpec {
                    token: Token {
                        kind: Int,
                        token: "int",
                        offset: 7,
                    },
                    kind: Type,
                },
            ),
            init: Scalar(
                Number(
                    202,
                ),
            ),
        },
    },
)
